@@ -2173,6 +2173,14 @@ describe A;
 store A into ':OUTPATH:';\,
 
 			},
+			{
+			'num' => 2,
+			'pig' => q\ 
+A = load 'sample' as (line:chararray);
+B = foreach A generate flatten(STRSPLIT(line)) as (i0, i1, i2);
+describe B;\,
+                        'expected_out_regex'  => 'B: {i0: bytearray,i1: bytearray,i2: bytearray}',
+			},
 		],
 		},
 		{
